--- a/src/page/commonUI/css/Header.css
+++ b/src/page/commonUI/css/Header.css
@@ -5,7 +5,7 @@
     color: #fff;
 }
 
-/* ===== 상단 로그인/회원가입 영역 ===== */
+
 .hdr-top {
     background-color: #111;
     /* 진한 배경 */
@@ -41,7 +41,7 @@
     color: #444;
 }
 
-/* ===== 메인 헤더 영역 ===== */
+
 .hdr-main {
     background-color: #1b1d24;
 }
@@ -54,7 +54,7 @@
     justify-content: space-between;
 }
 
-/* 좌측 */
+
 .hdr-main .left {
     display: flex;
     align-items: center;
@@ -69,21 +69,21 @@
     cursor: pointer;
 }
 
-/* 중앙 로고 */
+
 .logo img {
     height: 60px;
     display: block;
 }
 
 
-/* 우측 */
+
 .hdr-main .right {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-/* 공통 네비게이션 버튼 */
+
 .navlink {
     color: #ccc;
     text-decoration: none;
@@ -97,16 +97,14 @@
 }
 
 .navlink.active {
-    color: #ff365d;
-    /* 포인트 컬러 */
+    color: #FFCC00;
     font-weight: 600;
 }
 
-/* 마이페이지 버튼 강조 */
+
 .mypage {
     padding: 6px 14px;
     border-radius: 20px;
-    background: #ff365d;
     color: #fff !important;
     text-decoration: none;
     font-size: 15px;
@@ -115,5 +113,5 @@
 }
 
 .mypage:hover {
-    background: #e63054;
+    background: #FFCC00;
 }
