--- a/src/page/main/main.css
+++ b/src/page/main/main.css
@@ -17,12 +17,12 @@
 body,
 html,
 #root {
-    height: 100%;
+
+    background: linear-gradient(160deg, var(--bg-start), var(--bg-end));
 }
 
 body {
     margin: 0;
-    background: linear-gradient(160deg, var(--bg-start), var(--bg-end));
     color: #f7f7fb;
 }
 
@@ -97,7 +97,7 @@ body {
 .section-title {
     font-size: 28px;
     font-weight: 800;
-    text-align: center;
+    text-align: first;
     letter-spacing: .3px;
     margin: 26px 0 22px;
 }
@@ -171,7 +171,7 @@ body {
 
 @keyframes shimmer {
     100% {
-        transform: translateX(100%);
+        transform: translateX(80%);
     }
 }
 
