--- a/src/page/main/auth/MyPage/mypagelayout.css
+++ b/src/page/main/auth/MyPage/mypagelayout.css
@@ -1,6 +1,6 @@
 /* 중앙 정렬용 */
 .container {
-
+  
   max-width: 1200px;
   margin: 30 auto;
   padding: 0 24px;
@@ -10,14 +10,18 @@
 .side-layout {
   display: flex;
   min-height: 600px;
-  background-color: #111;
+  background-color: #0f0f0f;
   color: #fff;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 .sidebar {
   width: 220px;
-  background: #1c1c1c;
+  background: #1a1d26;
   padding: 25px 20px;
+  border-radius: 12px;
+  overflow: hidden;
   border-right: 1px solid #333;
   flex-shrink: 0;
 }
@@ -61,9 +65,12 @@
 .page-content {
   flex: 1;
   padding-left: 30px;
-  background: #181818;
+  
+  background: #1a1d26;
   border-left: 1px solid #333;
   min-height: 600px;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .page-content h2 {
