--- a/src/page/main/auth/MyPage/page/css/pointspage.css
+++ b/src/page/main/auth/MyPage/page/css/pointspage.css
@@ -10,7 +10,7 @@
   }
   
   .points-table {
-    background-color: #1c1c1c;
+    background-color: #3c455c;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     overflow: hidden;
@@ -26,13 +26,14 @@
   }
   
   .table-header {
-    background-color: #2b2b2b;
+    background-color: #2d2d2d;
     font-weight: bold;
     color: #ffcc00;
   }
   
   .table-row {
-    border-top: 1px solid #333;
+    background-color: #2d2d2d;
+    border-top: 1px solid #000000;
     color: #eee;
   }
   
