--- a/src/page/main/auth/MyPage/page/css/reservationpage.css
+++ b/src/page/main/auth/MyPage/page/css/reservationpage.css
@@ -16,7 +16,7 @@
 
 .reservation-ticket {
   display: flex;
-  background-color: #1c1c1c;
+  background-color: #2d2d2d;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
   overflow: hidden;
