--- a/src/page/main/faq.css
+++ b/src/page/main/faq.css
@@ -72,7 +72,7 @@
 }
 
 .faq-a {
-    padding: 0 20px 18px 20px;
+    padding: 20px 20px 20px 20px;
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 10px;
