--- a/src/page/commonUI/css/Header.css
+++ b/src/page/commonUI/css/Header.css
@@ -89,6 +89,7 @@
     text-decoration: none;
     font-size: 16px;
     transition: color 0.25s, transform 0.25s;
+    font-weight: 700;
 }
 
 .navlink:hover {
@@ -97,7 +98,6 @@
 }
 
 .navlink.active {
-    color: #FFCC00;
     font-weight: 600;
 }
 
