--- a/src/page/commonUI/css/Header.css
+++ b/src/page/commonUI/css/Header.css
@@ -115,3 +115,19 @@
 .mypage:hover {
     background: #FFCC00;
 }
+
+.logout-btn {
+    margin-right:10px;
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 13px;
+    font-weight: 800;
+    color: #ffffff;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.logout-btn:hover {
+    text-decoration: underline;
+}
